# decipher

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE.md  README.md  doc_requirements.txt  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json
HHMM/: .gitignore  README.md  pyproject.toml
HHMM/HHMM/: data_manager.py  inference.py  prediciton.py
bokeh-demo/: .dockerignore  Dockerfile  README.md  prediction_data.pkl  pyproject.toml  requirements_base.txt  tailwind.config.js
bokeh-demo/bokeh_demo/: backend.py  data_ingestion.py  exam_data.py  example_app.py  example_app_mock_other_models.py  example_app_new.py  faker.py  frontend.py  pilot.py  settings.py
bokeh-demo/data/dataset1/: X.npy  X_predicted.npy  config.yaml  dataset_metadata.json
bokeh-demo/data/dataset_large/: X.npy  dataset_metadata.json
bokeh-demo/examples/: pilot.py
bokeh-demo/examples/landing_page/: main.py
bokeh-demo/examples/landing_page/static/: style.css  style_tailwind.css
bokeh-demo/examples/landing_page/templates/: index.html
bokeh-demo/examples/pilot/: app.py  components.py  main.py
bokeh-demo/examples/pilot/static/: style.css  style_tailwind.css
bokeh-demo/examples/pilot/templates/: index.html  landing_page.html  macros.html  viztool.html
bokeh-demo/tests/: test_backend.py  test_frontend.py  test_landing_page.py  test_pilot.py
hmm_synthetic/: .gitignore  README.md  main.py  pyproject.toml
hmm_synthetic/.github/workflows/: test.yml
hmm_synthetic/.hooks/: pre-commit.json
hmm_synthetic/backend/: sojourn.py  transition.py  utils.py
hmm_synthetic/hmm_synthetic/: data_generator.py  main.py  settings.py
hmm_synthetic/hmm_synthetic/backend/: sojourn.py  transition.py  utils.py
hmm_synthetic/hmm_synthetic/plotting/: history_matrix.py  history_panel.py  plot_config.py  plot_utils.py
hmm_synthetic/plotting/: history_panel.py  plot_config.py
hmm_synthetic/tests/: test_hmm_synthetic.py  test_plotting.py
matfact/: .gitignore  .pre-commit-config.yaml  README.md  example.py  example2.py  hypothesis_test.py  index.html  main.py  mkdocs.yml  pyproject.toml  scmf_test.py  settings.py  structure.md  structure.rtf  system_test.py
matfact/.hooks/: pre-commit.json
matfact/data_generation/: gaussian_generator.py  main.py  masking.py
matfact/docs/: index.md
matfact/examples/: example.py  example2.py  example_class_based.py  example_command_line.py  example_hyperparamsearch.py  example_train_and_log.py
matfact/experiments/: .gitignore  l2_regularization_experiments.py  main.py  run_l2_reg_experiments.ipynb
matfact/experiments/algorithms/: __init__.py  convergence.py  optimization.py  risk_prediction.py  utils.py
matfact/experiments/algorithms/factorization/: cmf.py  mfbase.py  scmf.py  wcmf.py
matfact/experiments/l2_regularization/: experiment_utils.py  l2_reg_experiment.py  plot_utils.py
matfact/experiments/plotting/: diagnostic.py  plot_utils.py
matfact/experiments/simulation/: __init__.py  dataset.py  train_test.py  weights.py
matfact/matfact/: config.py  example_hyperparamsearch.py  settings.py
matfact/matfact/data_generation/: __init__.py  dataset.py  gaussian_generator.py  main.py  masking.py  processing.py  utils.py
matfact/matfact/exp_l2_reg/: experiment.py  experiment_utils.py  plot_utils.py
matfact/matfact/experiments/: __init__.py  config.py  logging.py  main.py  sklearn_factorizer.py  tracking.py  utils.py
matfact/matfact/experiments/algorithms/: convergence.py  risk_prediction.py  utils.py
matfact/matfact/experiments/algorithms/factorization/: cmf.py  mfbase.py  scmf.py  wcmf.py
matfact/matfact/experiments/predict/: clf_tree.py  utils.py
matfact/matfact/experiments/simulation/: weights.py
matfact/matfact/model/: __init__.py  config.py  logging.py  main.py  matfact.py  util.py
matfact/matfact/model/algorithms/: __init__.py
matfact/matfact/model/factorization/: __init__.py  convergence.py  utils.py  weights.py
matfact/matfact/model/factorization/factorizers/: cmf.py  (+3 more)
matfact/matfact/model/predict/: classification_tree.py  dataset_utils.py
matfact/matfact/model/simulation/: __init__.py  dataset.py
matfact/matfact/plotting/: __init__.py  diagnostic.py
matfact/matfact/preprocessing/: data_manager.py
matfact/matfact/processing/: data_manager.py  pipelines.py  transformers.py
matfact/results/data/: M.npy  M_test.npy  U.npy  V.npy  X_test.npy  X_test_masked.npy  X_train.npy  epochs.npy  loss_values.npy  p_pred.npy  t_pred.npy  theta_mle.npy  x_pred.npy  x_true.npy
matfact/test_artifacts/SCMF_test/: V_bc_log.npy  s_log.npy
matfact/tests/: generate_DGD_artifacts.py  generate_scmf_artifacts.py  test_data.py  test_experiment.py  test_factorizers.py  test_preprocessing.py  test_processing.py  test_scmf.py  test_system.py  test_threshold.py  test_weights.py
matfact/tests/test_artifacts/SCMF_test/: M  M_log.npy  U  U_log.npy  V_bc  V_bc_log.npy  X  X_log.npy  loss  loss_log.npy  s  s_log.npy
matfact/tests/test_datasets/: test_screening_data.csv
processing/: README.md  pyproject.toml
processing/processing/: pipelines.py  settings.py  transformers.py
processing/tests/: test_processing.py
processing/tests/test_datasets/: exams_df.parquet  hpv_df.parquet  metadata.json  person_df.parquet  selected_pids.json  test_dob_data.csv  test_screening_data.csv
viz-tool/: .dockerignore  Dockerfile  README.md  cli.py  docker-compose.yml  mkdocs.yml  pyproject.toml
viz-tool/apps/landing_page/: main.py
viz-tool/apps/landing_page/static/: style_tailwind.css
viz-tool/apps/landing_page/templates/: index.html
viz-tool/apps/pilot/: components.py  main.py  theme.yaml.backup
viz-tool/data/dataset1/: M.npy  dataset_metadata.json
viz-tool/data/dataset_large/: M.npy
viz-tool/docs/: development.md  index.md  mkdocstrings.css  reference.md  usage.md
viz-tool/examples/pilot/: components.py
viz-tool/examples/pilot/static/: style_tailwind.css
viz-tool/tests/: test_backend.py  test_frontend.py  test_landing_page.py
viz-tool/viz_tool/: backend.py  data_ingestion.py  exam_data.py  frontend.py  settings.py
(+76 files in other folders)
