[tool.poetry]
name = "bokeh-demo"
version = "0.1.0"
description = ""
authors = ["Thorvald Molthe Ballestad <thorvald@simula.no>"]
readme = "README.md"
packages = [{include = "bokeh_demo"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
bokeh = "^3.0.2"
matfact = {path = "../matfact", develop = true}
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
flake8 = "^5.0.4"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
