[tool.poetry]
name = "bokeh-demo"
version = "0.1.0"
description = ""
authors = ["Thorvald Molthe Ballestad <thorvald@simula.no>"]
readme = "README.md"
packages = [{include = "bokeh_demo"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
bokeh = "^3.0.2"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
flake8 = "^5.0.4"
black = {version = "^22.10.0", allow-prereleases = true}
pytest = "^7.2.0"
hypothesis = "^6.61.0"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
matfact = {path = "../matfact", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
