[tool.poetry]
name = "matfact"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.2"
scipy = "^1.9.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.0"
tensorflow = {version="^2.11.1", markers="platform_machine != 'arm64'"}
tensorflow-macos = {version="^2.11.1", markers="platform_machine == 'arm64'"}
tensorflow-metal = {version="^0.8.0", markers="platform_machine == 'arm64'"}
mlflow-skinny = "^2.2.2"
SQLAlchemy = "^2.0.9"  # Needed to use sqlite with mlflow-skinny
alembic = "^1.10.3"  # Needed to use sqlite with mlflow-skinny
sqlparse = "^0.4.4"  # Needed to use sqlite with mlflow-skinny
tqdm = "^4.64.1"
scikit-optimize = "^0.9.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.2"
pytest = "^7.1.3"
mypy = "^0.982"
types-tqdm = "^4.64.7"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
hypothesis = "^6.54.5"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = [
    "matfact.*",
    "matplotlib.*",
    #
    "scipy.*",
    #
    "mlflow",
    #
    "tensorflow.*",
    #
    "skopt.*",
    #
    "seaborn",
    #
    "sklearn.*",
    #
    "tqdm",
    #
    "pandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning",
    "ignore::PendingDeprecationWarning:",
]
